Update title in index.html to 'SATOSHI 2.0'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>obitoo2005 with GAEA</title>
+  <div class="title">SATOSHI 2.0</div>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
