--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="title">obitoo2005 with GAEA</div>
+    <div class="title">SATOSHI 2.0 with GAEA</div>
     <div class="timer" id="timer"></div>
   </div>
 
